# bookworm_app

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  populate_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f801f6430fb_change_book_cover_photo_property_to_max_.py  17d4d91bad61_update_discount_end_date_to_allow_null.py  2e2f2652eac7_update_key_for_all_tables.py  58368a2a4c01_make_change_in_order_table.py  5f5c8c2d0825_change_book_book_cover_photo_and_user_.py  7eb42d008fee_.py  7f61b1af0b75_.py  84900e3c7c2a_delete_bookauthor_and_bookcategories_.py  8dc1d11fc0bd_add_time_zone_to_review_date.py  9cfbb373c8cd_add_new_tables_for_book_store.py  cd3111fc7227_update_columns_for_all_tables.py  f498e2ddc61d_add_new_tables_from_author_book_.py
backend/app/: main.py
backend/app/api/routers/: auth.py  authors.py  books.py  cart.py  categories.py  discounts.py  orders.py  reviews.py
backend/app/api/v1/: auth.py
backend/app/core/: config.py  security.py
backend/app/crud/: author.py  book.py  discount.py  order.py  review.py
backend/app/db/: database.py
backend/app/dependencies/: auth.py
backend/app/models/: author.py  book.py  category.py  discount.py  order.py  review.py  user.py
backend/app/schemas/: auth.py  author.py  book.py  category.py  discount.py  order.py  response.py  review.py  user.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: BookCard.tsx  Footer.tsx  FormatNumber.tsx  Navbar.tsx  Pagination.tsx  (+2 more)
(+12 files in other folders)
